<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="percent_10">10%</string>
    <string name="percent_15">15%</string>
    <string name="percent_20">20%</string>
	<string name="tip_amount">Tip is: %1$s</string>
	<string name="check_amount">%1s</string>
	<string name="submit">Tip</string>
</resources>
