<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalcActivity" >

    <EditText
        android:id="@+id/check_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="57dp"
        android:ems="10" />

    <Button
        android:id="@+id/percent_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/check_amount"
        android:layout_below="@+id/check_amount"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="78dp"
 		android:onClick="displayTip"
        android:text="@string/percent_10" />

    <Button
        android:id="@+id/percent_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/percent_10"
        android:layout_alignTop="@+id/percent_10"
        android:layout_toRightOf="@+id/percent_10"
        android:onClick="displayTip"
        android:text="@string/percent_15" />

    <Button
        android:id="@+id/percent_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/percent_15"
        android:layout_alignBottom="@+id/percent_15"
        android:layout_toRightOf="@+id/percent_15"
        android:onClick="displayTip"
        android:text="@string/percent_20" />

    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp"
        android:text="@string/tip_amount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/percent_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/check_amount"
        android:layout_below="@+id/check_amount"
        android:layout_marginTop="20dp"
        android:ems="10" />

    <Button
        android:id="@+id/submit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/check_amount"
        android:layout_alignTop="@+id/percent_tip"
        android:onClick="displayTip"
        android:text="@string/submit" />

</RelativeLayout>
